# traquad_gazebo

./: README.md  compose.yaml  compose_build.bash  convert.yaml  ossservazione_test.npy  test.py  test_inference.py
DockerFiles/: Dockerfile
install/: local_setup.sh  setup.sh
log/: latest_build
omni_mul_experiments/Experiment_OM_2025_7_17_10:18:24/: Experiment_OM_2025_7_17_10:18:24_0.db3  metadata.yaml
omni_mul_experiments/Experiment_OM_2025_7_17_11:26:37/: Experiment_OM_2025_7_17_11:26:37_0.db3  metadata.yaml
omni_mul_experiments/Experiment_OM_2025_7_17_11:29:38/: Experiment_OM_2025_7_17_11:29:38_0.db3  metadata.yaml
omni_mul_experiments/Experiment_OM_2025_7_17_9:39:54/: Experiment_OM_2025_7_17_9:39:54_0.db3  metadata.yaml
rosbag2_2025_07_28-09_26_29/: metadata.yaml  rosbag2_2025_07_28-09_26_29_0.db3
rosbag2_2025_07_28-09_28_12/: metadata.yaml
rosbag2_2025_07_28-09_32_51/: metadata.yaml
rosbag2_2025_07_28-09_39_28/: metadata.yaml  rosbag2_2025_07_28-09_39_28_0.db3
src/Pi3Hat_Controllers/: README.md
src/Pi3Hat_Controllers/log/: latest_list
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/msg/: WheelVelocityCommand.msg
src/mulinex_description/: CMakeLists.txt  README.md
src/mulinex_description/launch/: display_mulinex.launch.py  gazebo_mulinex.launch.py
src/mulinex_description/meshes/: Body.stl  Lower_leg_right.stl  Module_2_right.stl  Module_right_front.stl  Module_right_hind.stl  body_left.stl  body_right.stl  goat_lower_foot_LF.STL  goat_lower_foot_LH.STL  goat_lower_foot_RF.STL  goat_lower_foot_RH.STL  goat_lower_leg_LF.STL  goat_lower_leg_LH.STL  goat_lower_leg_RF.STL  goat_lower_leg_RH.STL  mecanum_wheel_lf.STL  (+10 more)
src/mulinex_ignition/: CMakeLists.txt  README.md
src/mulinex_ignition/config/: mulinex_mf.yaml  omnicar.yaml
src/mulinex_ignition/launch/: gz_harmonic_sim_w_rbt.launch.py  gz_harmonic_sim_w_rbt_PD_wheels.launch.py  gz_harmonic_sim_w_rbt_PDonly.launch.py  test_lidar.launch.py
src/mulinex_ignition/src/: getup.cpp  gt_odom_pub.cpp  move_wheels.cpp
src/mulinex_ignition/world/: empty.sdf  turtle_arena.sdf
src/mulinex_ignition_py/: package.xml  setup.cfg  setup.py
src/rbt_pd_cnt/: CMakeLists.txt
src/rlg_quad_controller/: README.md  setup.py
src/wheels_vel_cnt/: CMakeLists.txt  package.xml  wheels_vel_cnt.xml
(+497 files in other folders)
